--- a/poo-library-app-web/src/main/webapp/styles/main.css
+++ b/poo-library-app-web/src/main/webapp/styles/main.css
@@ -35,11 +35,11 @@ table caption {
 }
 
 #loading-bar .bar {
-  background: red !important;
-  /* -moz-box-shadow: red 1px 0 6px 1px !important; */
-  /* -ms-box-shadow: red 1px 0 6px 1px !important; */
-  /* -webkit-box-shadow: red 1px 0 6px 1px !important; */
-  /* box-shadow: red 1px 0 6px 1px !important; */
-  border-top-color: red !important;
-  border-left-color: red !important;
+  background: red;
+  /* -moz-box-shadow: red 1px 0 6px 1px; */
+  /* -ms-box-shadow: red 1px 0 6px 1px; */
+  /* -webkit-box-shadow: red 1px 0 6px 1px; */
+  /* box-shadow: red 1px 0 6px 1px; */
+  border-top-color: red;
+  border-left-color: red;
 }
