pequena melhoria no layout

--- a/poo-library-app-web/src/main/webapp/views/login/index.html
+++ b/poo-library-app-web/src/main/webapp/views/login/index.html
@@ -8,14 +8,12 @@
 }
 </style>
 <form class="form-horizontal" action="javascript:void(0);" method="post" ng-submit="login()" ng-show="user == null">
-  <div class="form-login col-sm-6 col-xs-12">
+  <div class="form-login col-sm-6 col-xs-12 col-md-6 col-lg-4">
     <div class="panel panel-primary">
-      <div class="panel-heading clearfix">
-        <div class="">
-          Fomulário de Login
-        </div>
-      </div>
       <div class="panel-body">
+        <div class="text-center">
+          <h4>Autenticação</h4>
+        </div>
         <div class="form-group">
           <div class="col-lg-12">
             <label class="control-label" for="login">
