--- a/poo-library-app-web/src/main/webapp/views/admin/menu/index.html
+++ b/poo-library-app-web/src/main/webapp/views/admin/menu/index.html
@@ -64,12 +64,12 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-            <span class="glyphicon glyphicon-user"></span> ADMIN
+            <span class="glyphicon glyphicon-user"></span> Augusto
             <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li class="divider"></li>
             <li>
-              <a href="#/settings">
+              <a href="#/user/{{user.id}}/settings">
                 <span class="glyphicon glyphicon-cog"></span> Configurações</a>
             </li>
             <li class="divider"></li>
