--- a/poo-library-app-web/src/main/webapp/views/user/settings/index.html
+++ b/poo-library-app-web/src/main/webapp/views/user/settings/index.html
@@ -1,1 +1,14 @@
-settings/index.html
+<div class="well">
+  <form class="form-horizontal" action="javascript:void(0);" method="post">
+    <fieldset>
+      <legend>Configurações</legend>
+      <div class="form-group">
+        <div class="col-lg-12">
+          <label class="control-label">
+            Tema escuro?</label>
+          <input type="checkbox" ng-model="settings.theme.dark">
+        </div>
+      </div>
+    </fieldset>
+  </form>
+</div>
