--- a/poo-library-app-web/src/main/webapp/views/admin/usuario/index.html
+++ b/poo-library-app-web/src/main/webapp/views/admin/usuario/index.html
@@ -6,24 +6,29 @@
     <li>
       Usuários</li>
   </ol>
-  <div class="btn-group pull-right">
-    <a class="btn btn-sm btn-primary" href="#{{rootPath}}/new">
-      <span class="glyphicon glyphicon-plus"></span> Novo Usuário
-    </a>
-    <a data-target="#" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-      <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu pull-right">
-      <li>
-        <a class="" href="javascript:void(0);">
-          <span class="glyphicon glyphicon-remove"></span> Deletar
-        </a>
-      </li>
-      <li class="divider"></li>
-      <li>
-        <a class="" href="javascript:void(0);">
-          Selecionar</a></li>
-    </ul>
+  <div class="input-group">
+    <form ng-submit="search(search.term)">
+      <input class="form-control" type="search" placeholder="Buscar por Nome, Endereço, ..." ng-model="search.term">
+    </form>
+    <div class="input-group-btn">
+      <a class="btn btn-primary" href="#{{rootPath}}/new">
+        <span class="glyphicon glyphicon-plus"></span> Novo
+      </a>
+      <a data-target="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+        <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu pull-right">
+        <li>
+          <a class="" href="javascript:void(0);">
+            <span class="glyphicon glyphicon-remove"></span> Deletar
+          </a>
+        </li>
+        <li class="divider"></li>
+        <li>
+          <a class="" href="javascript:void(0);">
+            Selecionar</a></li>
+      </ul>
+    </div>
   </div>
   <table class="table table-striped table-hover">
     <thead>
