melhorias no layout

--- a/poo-library-app-web/src/main/webapp/views/login/index.html
+++ b/poo-library-app-web/src/main/webapp/views/login/index.html
@@ -7,7 +7,7 @@
   transform: translate(-50%, -50%);
 }
 </style>
-<form class="form-horizontal" action="javascript:void(0);" method="post" ng-submit="login()" ng-show="user == null">
+<form class="form-horizontal" action="javascript:void(0);" method="post" ng-submit="login()" ng-show="user.credentials == null">
   <div class="form-login col-sm-6 col-xs-12 col-md-6 col-lg-4">
     <div class="panel panel-primary">
       <div class="panel-body">
