--- a/poo-library-app-web/src/main/webapp/views/admin/biblioteca/acervo/index.html
+++ b/poo-library-app-web/src/main/webapp/views/admin/biblioteca/acervo/index.html
@@ -9,25 +9,34 @@
     <li>
       Acervo</li>
   </ol>
-  <div class="btn-group pull-right">
-    <a class="btn btn-sm btn-primary" href="#{{url}}/new">
-      <span class="glyphicon glyphicon-plus"></span> Novo Acervo
-    </a>
-    <a data-target="#" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-      <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu pull-right">
-      <li>
-        <a class="" href="javascript:void(0);">
-          <span class="glyphicon glyphicon-remove"></span> Deletar
+  
+  <form ng-submit="search(search.term)">
+    <div class="input-group input-group-sm">
+      <a class="input-group-addon">
+        <span class="glyphicon glyphicon-search"></span>
+      </a>
+      <input class="form-control search search-user" type="search" placeholder="Buscar por Nome, Categoria" ng-model="search.term">
+      <div class="input-group-btn">
+        <a class="btn btn-primary" href="#{{url}}/new">
+          <span class="glyphicon glyphicon-plus"></span> Novo
         </a>
-      </li>
-      <li class="divider"></li>
-      <li>
-        <a class="" href="javascript:void(0);">
-          Selecionar</a></li>
-    </ul>
-  </div>
+        <a data-target="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu pull-right">
+          <li>
+            <a class="" href="javascript:void(0);">
+              <span class="glyphicon glyphicon-remove"></span> Deletar
+            </a>
+          </li>
+          <li class="divider"></li>
+          <li>
+            <a class="" href="javascript:void(0);">
+              Selecionar</a></li>
+        </ul>
+      </div>
+    </div>
+  </form>
   <table class="table table-striped table-hover">
     <thead>
       <tr>
@@ -38,6 +47,12 @@
       </tr>
     </thead>
     <tfoot>
+        <tr>
+            <td class="text-center" colspan="2" ng-if="itens == null || itens.length == 0">
+                <em>
+                    Nenhum item a exibir</em>
+            </td>
+        </tr>
     </tfoot>
     <tbody>
       <tr ng-repeat="item in itens">
