--- a/poo-library-app-web/src/main/webapp/views/admin/biblioteca/index.html
+++ b/poo-library-app-web/src/main/webapp/views/admin/biblioteca/index.html
@@ -35,6 +35,12 @@
       </tr>
     </thead>
     <tfoot>
+        <tr>
+            <td class="text-center" colspan="2" ng-if="itens == null || itens.length == 0">
+                <em>
+                    Nenhum item a exibir</em>
+            </td>
+        </tr>
     </tfoot>
     <tbody>
       <tr ng-repeat="item in itens">
