--- a/poo-library-app-web/src/main/webapp/views/user/menu/index.html
+++ b/poo-library-app-web/src/main/webapp/views/user/menu/index.html
@@ -32,11 +32,11 @@
           </ul>
         </li>
         <li class="">
-          <a href="#/user/{{user.id}}/locacao">
+          <a href="#/user/{{user.credentials.id}}/locacao">
             <span class="glyphicon glyphicon-calendar"></span> Empréstimos</a>
         </li>
         <li>
-          <a href="#/user/{{user.id}}/reserva">
+          <a href="#/user/{{user.credentials.id}}/reserva">
             <span class="glyphicon glyphicon-saved"></span> Reservas</a>
         </li>
       </ul>
@@ -48,7 +48,7 @@
           <ul class="dropdown-menu" role="menu">
             <li class="divider"></li>
             <li>
-              <a href="#/user/{{user.id}}/settings">
+              <a href="#/user/{{user.credentials.id}}/settings">
                 <span class="glyphicon glyphicon-cog"></span> Configurações</a>
             </li>
             <li class="divider"></li>
