--- a/poo-library-app-web/src/main/webapp/views/admin/biblioteca/acervo/edit.html
+++ b/poo-library-app-web/src/main/webapp/views/admin/biblioteca/acervo/edit.html
@@ -37,7 +37,7 @@
             </select>
           </div>
         </div>
-        <div class="form-group" ng-show="data.tipo != 'TEXTO'">
+        <div class="form-group" ng-show="data.categoria != 'TEXTO'">
           <div class="col-lg-12">
             <label class="control-label">
               Título</label>
