--- a/poo-library-app-web/src/main/webapp/views/user/acervo/index.html
+++ b/poo-library-app-web/src/main/webapp/views/user/acervo/index.html
@@ -1,1 +1,79 @@
-acervo/index.html
+<section ng-controller="AcervoUsuarioCtrlr">
+ <ol class="breadcrumb">
+    <li>
+      <a href="#/">
+        Início</a></li>
+    <li>
+      Acervo</li>
+  </ol>
+  <form ng-submit="search(search.term)">
+    <div class="input-group input-group-sm">
+      <a class="input-group-addon">
+        <span class="glyphicon glyphicon-search"></span>
+      </a>
+      <input class="form-control search search-user" type="search" placeholder="Buscar por Nome, Categoria" ng-model="search.term" autofocus>
+      <div class="input-group-btn">
+        <a data-target="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu pull-right">
+          <li>
+            <a class="" href="javascript:void(0);">
+              Selecionar</a></li>
+        </ul>
+      </div>
+    </div>
+  </form>
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th>
+          Itens do Acervo</th>
+        <th style="width: 8rem;">
+          Ações</th>
+      </tr>
+    </thead>
+    <tfoot>
+        <tr>
+            <td class="text-center" colspan="2" ng-if="itens == null || itens.length == 0">
+                <em>
+                    Nenhum item a exibir</em>
+            </td>
+        </tr>
+    </tfoot>
+    <tbody>
+      <tr ng-repeat="item in itens">
+        <td>
+          <a href="#{{url}}/{{item.id}}">
+            &#35;{{item.id}} - <strong>{{item.titulo}}</strong>
+            <br>
+            <small>
+              {{item.categoria}} :: <em>R$ {{item.precoLocacao}}</em>
+            </small>
+          </a>
+        </td>
+        <td>
+          <div class="btn-group">
+            <a class="btn btn-sm btn-primary" href="javascript:void(0);" title="Alugar" ng-click="locar(item.id)">
+              <span class="glyphicon glyphicon-shopping-cart"></span>
+            </a>
+            <a data-target="#" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu pull-right">
+              <li>
+                <a href="#">
+                  <span class="glyphicon glyphicon-heart"></span> Reservar</a>
+              </li>
+              <li class="divider"></li>
+              <li>
+                <a href="#">
+                  <span class="glyphicon glyphicon-th-list"></span> Ver detalhes</a>
+              </li>
+            </ul>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</section>
