--- a/poo-library-app-web/src/main/webapp/styles/main.css
+++ b/poo-library-app-web/src/main/webapp/styles/main.css
@@ -9,3 +9,9 @@ table td a {
   border-top: 4px solid;
 }
 
+input[type="search"] {
+  -webkit-appearance: searchfield;
+}
+input[type="search"]::-webkit-search-cancel-button {
+  -webkit-appearance: searchfield-cancel-button;
+}
