--- a/poo-library-app-web/src/main/webapp/views/admin/biblioteca/acervo/edit.html
+++ b/poo-library-app-web/src/main/webapp/views/admin/biblioteca/acervo/edit.html
@@ -1,8 +1,8 @@
 <div ng-controller="AcervoCtrlr">
   <ol class="breadcrumb">
     <li>
-      <a href="#/">
-        Início</a>
+      <a href="#/admin">
+        Início</a></li>
     </li>
     <li>
       <a href="#/admin/biblioteca">
