--- a/poo-library-app-web/src/main/webapp/views/admin/biblioteca/edit.html
+++ b/poo-library-app-web/src/main/webapp/views/admin/biblioteca/edit.html
@@ -1,7 +1,8 @@
 <div>
   <ol class="breadcrumb">
     <li>
-      <a href="#/">Início</a></li>
+      <a href="#/admin">
+        Início</a></li>
     <li>
       <a href="#{{rootPath}}">Unidades</a></li>
     <li class="active">
