--- a/poo-library-app-web/src/main/webapp/views/admin/biblioteca/index.html
+++ b/poo-library-app-web/src/main/webapp/views/admin/biblioteca/index.html
@@ -1,7 +1,7 @@
 <section ng-controller="BibliotecaCtrlr" ng-init="load()">
   <ol class="breadcrumb">
     <li>
-      <a href="#/">
+      <a href="#/admin">
         Início</a></li>
     <li>
       Unidades</li>
