--- a/poo-library-app-web/src/main/webapp/views/admin/usuario/edit.html
+++ b/poo-library-app-web/src/main/webapp/views/admin/usuario/edit.html
@@ -10,7 +10,8 @@
 </script>
 <ol class="breadcrumb">
   <li>
-    <a href="#/">Início</a></li>
+    <a href="#/admin">
+      Início</a></li>
   <li>
     <a href="#{{rootPath}}">Usuários</a></li>
   <li class="active">
