--- a/poo-library-app-web/src/main/webapp/views/admin/usuario/index.html
+++ b/poo-library-app-web/src/main/webapp/views/admin/usuario/index.html
@@ -1,12 +1,12 @@
 <section ng-controller="UsuarioCtrlr" ng-init="load()">
   <ol class="breadcrumb">
     <li>
-      <a href="#/">
+      <a href="#/admin">
         Início</a></li>
     <li>
       Usuários</li>
   </ol>
-  <form ng-submit="search(search.term)">
+  <form ng-submit="find(search.term)">
     <div class="input-group input-group-sm">
       <a class="input-group-addon">
         <span class="glyphicon glyphicon-search"></span>
