--- a/poo-library-app-web/src/main/webapp/views/user/acervo/index.html
+++ b/poo-library-app-web/src/main/webapp/views/user/acervo/index.html
@@ -1,12 +1,12 @@
 <section ng-controller="AcervoUsuarioCtrlr">
  <ol class="breadcrumb">
     <li>
-      <a href="#/">
+      <a href="#/user">
         Início</a></li>
     <li>
       Acervo</li>
   </ol>
-  <form ng-submit="search(search.term)">
+  <form ng-submit="find(search.term)">
     <div class="input-group input-group-sm">
       <a class="input-group-addon">
         <span class="glyphicon glyphicon-search"></span>
