--- a/poo-library-app-web/src/main/webapp/views/user/menu/index.html
+++ b/poo-library-app-web/src/main/webapp/views/user/menu/index.html
@@ -7,7 +7,7 @@
           class="icon-bar"></span> <span class="icon-bar"></span> <span
           class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#/">
+      <a class="navbar-brand" href="#/user">
         <span class="glyphicon glyphicon-book"></span> SGLiB
       </a>
     </div>
