--- a/poo-library-app-web/src/main/webapp/views/admin/usuario/edit.html
+++ b/poo-library-app-web/src/main/webapp/views/admin/usuario/edit.html
@@ -32,19 +32,39 @@
       <div class="form-group">
         <div class="col-lg-12">
           <label class="control-label">
+            Login</label>
+          <input class="form-control" name="nome" type="text" ng-model="data.login" required autofocus>
+        </div>
+      </div>
+      <div class="form-group" ng-if="!(data.id >= 0)">
+        <div class="col-lg-12">
+          <label class="control-label">
+            Senha</label>
+          <input class="form-control" name="nome" type="password" ng-model="data.senha" required autofocus>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-lg-12">
+          <label class="control-label">
             CPF</label>
           <input class="form-control cpf-input" name="cpf" type="text" maxlength="14" ng-model="data.cpf" required>
         </div>
       </div>
-      <!-- <div> -->
-      <!--   <label> Tipo:<select ng-model="data.tipo"> -->
-      <!--       <option value="" selected disabled hidden>-- -->
-      <!--         SELECIONE O TIPO --</option> -->
-      <!--       <option value="COMUM">Usuário Comum</option> -->
-      <!--       <option value="ADMIN">Administrador</option> -->
-      <!--   </select> -->
-      <!--   </label> -->
-      <!-- </div> -->
+      <div class="form-group" ng-if="!(data.id >= 0)">
+        <div class="col-lg-12">
+          <label class="control-label">
+              Tipo
+          </label>
+          <select class="form-control" ng-model="data.tipo">
+              <option value="" selected disabled hidden>
+                --SELECIONE O TIPO --</option>
+              <option value="COMUM">
+                Usuário Comum</option>
+              <option value="ADMIN">
+                Administrador</option>
+          </select>
+        </div>
+      </div>
       <div class="form-group">
         <div class="col-lg-12">
           <label class="control-label">
