WIP reserva/locação de itens de acervo

--- a/poo-library-app-web/src/main/webapp/views/user/acervo/view.html
+++ b/poo-library-app-web/src/main/webapp/views/user/acervo/view.html
@@ -1,1 +1,13 @@
-acervo/view.html
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <h4>Detalhes do Item - {{item.titulo}}</h4>
+  </div>
+  <div class="panel-body">
+  </div>
+  <div class="panel-footer">
+      <a class="btn btn-sm btn-default">
+        <span></span> Voltar</a>
+      <a class="btn btn-sm btn-primary">
+        <span></span> Alugar</a>
+  </div>
+</div>
