--- a/poo-library-app-web/src/main/webapp/views/admin/biblioteca/acervo/edit.html
+++ b/poo-library-app-web/src/main/webapp/views/admin/biblioteca/acervo/edit.html
@@ -18,8 +18,10 @@
     <form class="form-horizontal" action="javascript:void(0);" method="post" ng-submit="save('/admin/biblioteca/' + params.bibliotecaId + '/acervo')" ng-init="edit(params.id)">
       <fieldset>
         <legend>Cadastro de Acervo</legend>
+
         <input type="hidden" ng-model="params.id">
         <input type="hidden" ng-model="params.bibliotecaId">
+
         <div class="form-group" ng-hide="params.id > 0">
           <div class="col-lg-12">
             <label class="control-label">
@@ -27,7 +29,7 @@
             </label>
             <select class="form-control acervo-categoria" ng-model="data.categoria" autofocus required>
               <option value="" selected disabled hidden>
-                -- SELECIONE O TIPO --</option>
+                -- INFORME A CATEGORIA DA OBRA --</option>
               <option value="LIVRO">
                 Livro</option>
               <option value="APOSTILA">
@@ -41,28 +43,35 @@
           <div class="col-lg-12">
             <label class="control-label">
               Título</label>
-            <input class="form-control" type="text" ng-model="data.titulo" required>
+            <input class="form-control" type="text" ng-model="data.titulo" placeholder="Informe o título da obra" required>
           </div>
         </div>
         <div class="form-group">
           <div class="col-lg-12">
             <label class="control-label">
               Autor</label>
-            <input class="form-control" type="text" ng-model="data.autor" required>
+            <input class="form-control" type="text" ng-model="data.autor" placeholder="Informe o autor da obra" required>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-lg-12">
+            <label class="control-label">
+              Sinopse</label>
+            <textarea class="form-control" ng-model="data.sinopse" placeholder="Informe o resumo sobre a obra" required></textarea>
           </div>
         </div>
         <div class="form-group">
           <div class="col-lg-12">
             <label class="control-label">
               Qte. Total</label>
-            <input class="form-control" type="number" ng-model="data.qteTotal" required>
+            <input class="form-control" type="number" ng-model="data.qteTotal" placeholder="Informe quantidade no acervo" required>
           </div>
         </div>
         <div class="form-group">
           <div class="col-lg-12">
             <label class="control-label">
               Preço Locação</label>
-            <input class="form-control" type="text" ng-model="data.precoLocacao" required>
+            <input class="form-control" type="text" ng-model="data.precoLocacao" placeholder="Informe preço de locação da obra" required>
           </div>
         </div>
         <div class="form-group">
