--- a/poo-library-app-web/src/main/webapp/views/admin/biblioteca/index.html
+++ b/poo-library-app-web/src/main/webapp/views/admin/biblioteca/index.html
@@ -6,25 +6,35 @@
     <li>
       Unidades</li>
   </ol>
-  <div class="btn-group pull-right">
-    <a class="btn btn-sm btn-primary" href="#{{rootPath}}/new">
-      <span class="glyphicon glyphicon-plus"></span> Nova Biblioteca
-    </a>
-    <a data-target="#" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-      <span class="caret"></span>
-    </a>
-    <ul class="dropdown-menu pull-right">
-      <li>
-        <a class="" href="javascript:void(0);">
-          <span class="glyphicon glyphicon-remove"></span> Deletar
+  <form ng-submit="find(search.term)">
+    <div class="btn-group pull-right">
+      <div class="input-group input-group-sm">
+        <a class="input-group-addon">
+          <span class="glyphicon glyphicon-search"></span>
         </a>
-      </li>
-      <li class="divider"></li>
-      <li>
-        <a class="" href="javascript:void(0);">
-          Selecionar</a></li>
-    </ul>
-  </div>
+        <input class="form-control search search-user" type="search" placeholder="Buscar por Nome, Categoria" ng-model="search.term" autofocus>
+        <div class="input-group-btn">
+          <a class="btn btn-sm btn-primary" href="#{{url}}/new">
+            <span class="glyphicon glyphicon-plus"></span> Nova
+          </a>
+          <a data-target="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu pull-right">
+            <li>
+              <a class="" href="javascript:void(0);">
+                <span class="glyphicon glyphicon-remove"></span> Deletar
+              </a>
+            </li>
+            <li class="divider"></li>
+            <li>
+              <a class="" href="javascript:void(0);">
+                Selecionar</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </form>
   <table class="table table-striped table-hover">
     <thead>
       <tr>
@@ -55,8 +65,8 @@
         </td>
         <td>
           <div class="btn-group">
-            <a class="btn btn-sm btn-primary" ng-click="remove(item.id)">
-              <span class="glyphicon glyphicon-remove"></span>
+            <a class="btn btn-sm btn-primary" href="#{{rootPath}}/{{item.id}}/acervo">
+              <span class="glyphicon glyphicon-book"></span>
             </a>
             <a data-target="#" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
@@ -67,11 +77,8 @@
                   <span class="glyphicon glyphicon-remove"></span> Deletar
                 </a>
               </li>
-              <li class="divider"></li>
-              <li>
-                <a class="" href="#{{rootPath}}/{{item.id}}/acervo">
-                  <span class="glyphicon glyphicon-book"></span> Gerenciar Acervo</a>
-              </li>
+              <!-- <li class="divider"></li>
+              <li></li> -->
             </ul>
           </div>
         </td>
