--- a/poo-library-app-web/src/main/webapp/views/admin/usuario/index.html
+++ b/poo-library-app-web/src/main/webapp/views/admin/usuario/index.html
@@ -1,4 +1,4 @@
-<section ng-controller="UsuarioCtrlr" ng-init="load()">
+<section ng-controller="UserCtrlr" ng-init="load()">
   <ol class="breadcrumb">
     <li>
       <a href="#/admin">
