--- a/poo-library-app-web/src/main/webapp/views/user/acervo/index.html
+++ b/poo-library-app-web/src/main/webapp/views/user/acervo/index.html
@@ -1,4 +1,4 @@
-<section ng-controller="AcervoUsuarioCtrlr">
+<section ng-controller="AcervoUserCtrlr">
  <ol class="breadcrumb">
     <li>
       <a href="#/user">
