--- a/poo-library-app-web/src/main/webapp/views/user/acervo/view.html
+++ b/poo-library-app-web/src/main/webapp/views/user/acervo/view.html
@@ -1,13 +1,33 @@
-<div class="panel panel-info">
+<div class="panel panel-primary" ng-controller="AcervoUserCtrlr" ng-init="edit(params.id)">
   <div class="panel-heading">
-    <h4>Detalhes do Item - {{item.titulo}}</h4>
+    <h4>Detalhes do Item - {{data.titulo}}</h4>
   </div>
   <div class="panel-body">
+    <dl class="dl-horizontal">
+      <dt>Título</dt>
+      <dd>{{data.titulo}}</dd>
+
+      <dt>Autor</dt>
+      <dd>{{data.autor}}</dd>
+
+      <dt>Aluguel</dt>
+      <dd>R$ {{data.precoLocacao}}</dd>
+    </dl>
+  
+    <fieldset>
+      <legend>
+        <small>
+          Sinopse</small>
+      </legend>
+      {{data.sinopse}}
+    </fieldset>
   </div>
-  <div class="panel-footer">
-      <a class="btn btn-sm btn-default">
+  <div class="panel-footer clearfix">
+    <div class="pull-right">
+      <a class="btn btn-sm btn-default" href="#{{rootPath}}">
         <span></span> Voltar</a>
       <a class="btn btn-sm btn-primary">
         <span></span> Alugar</a>
+    </div>
   </div>
 </div>
