--- a/poo-library-app-web/src/main/webapp/views/user/locacao/index.html
+++ b/poo-library-app-web/src/main/webapp/views/user/locacao/index.html
@@ -1,1 +1,70 @@
-locacao/index.html
+<section ng-controller="LocacaoUserCtrlr" ng-init="load()">
+ <ol class="breadcrumb">
+    <li>
+      <a href="#/user">
+        Início</a></li>
+    <li>
+      Locações</li>
+  </ol>
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th style="width: 2rem;">
+          Status</th>
+        <th>
+          Locação</th>
+        <th style="width: 8rem;">
+          Ações</th>
+      </tr>
+    </thead>
+    <tfoot>
+        <tr>
+            <td class="text-center" colspan="2" ng-if="itens == null || itens.length == 0">
+                <em>
+                    Nenhum item a exibir</em>
+            </td>
+        </tr>
+    </tfoot>
+    <tbody>
+      <tr ng-repeat="locacao in itens">
+        <td>
+          <span class="glyphicon glyphicon-alert" ng-if="locacao.status == 'ATRASADA'"></span>
+          <a class="btn btn-disabled" href="javascript:void(0);">
+            <span class="glyphicon glyphicon-alert text-danger" title="em atraso" ng-if="locacao.status == 'ATRASADA'"></span>
+            <span class="glyphicon glyphicon-ok text-success" title="ok" ng-if="locacao.status == 'OK'"></span>
+          </a>
+        </td>
+        <td>
+          <a href="#{{url}}/{{locacao.id}}">
+            &#35;{{locacao.id}} - <strong>{{locacao.itemAcervo.titulo}}</strong>
+            <br>
+            <small>
+              {{locacao.itemAcervo.categoria}} :: <em>R$ {{locacao.itemAcervo.precoLocacao}}</em>
+            </small>
+          </a>
+        </td>
+        <td>
+          <div class="btn-group">
+            <a class="btn btn-sm btn-primary" href="javascript:void(0);" title="Alugar" ng-click="locar(locacao.id)">
+              <span class="glyphicon glyphicon-shopping-cart"></span>
+            </a>
+            <a data-target="#" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu pull-right">
+              <li>
+                <a href="#">
+                  <span class="glyphicon glyphicon-heart"></span> Devolver</a>
+              </li>
+              <li class="divider"></li>
+              <li>
+                <a href="#">
+                  <span class="glyphicon glyphicon-th-list"></span> Ver detalhes</a>
+              </li>
+            </ul>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</section>
