--- a/poo-library-app-web/src/main/webapp/views/user/menu/index.html
+++ b/poo-library-app-web/src/main/webapp/views/user/menu/index.html
@@ -33,7 +33,7 @@
         </li>
         <li class="">
           <a href="#/user/{{user.credentials.id}}/locacao">
-            <span class="glyphicon glyphicon-calendar"></span> Empréstimos</a>
+            <span class="glyphicon glyphicon-calendar"></span> Locações</a>
         </li>
         <li>
           <a href="#/user/{{user.credentials.id}}/reserva">
