--- a/poo-library-app-web/src/main/webapp/views/login/index.html
+++ b/poo-library-app-web/src/main/webapp/views/login/index.html
@@ -10,33 +10,42 @@
 <form class="form-horizontal" action="javascript:void(0);" method="post" ng-submit="login()" ng-show="user.credentials == null">
   <div class="form-login col-sm-6 col-xs-12 col-md-6 col-lg-4">
     <div class="panel panel-primary">
-      <div class="panel-body">
-        <div class="text-center">
-          <h4>Autenticação</h4>
-        </div>
-        <div class="form-group">
-          <div class="col-lg-12">
-            <label class="control-label" for="login">
-              Login</label>
-            <input class="form-control" name="login" type="text" ng-model="credentials.login" required autofocus>
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="col-lg-12">
-            <label class="control-label" for="login">
-              Senha</label>
-            <input class="form-control" name="login" type="password" ng-model="credentials.password" required autofocus>
-          </div>
-        </div>
+      <div class="text-center">
+        <h3>Autenticação</h3>
       </div>
-      <div class="panel-footer">
+      <div class="panel-body">
         <div class="form-group">
-          <div class="col-lg-12 form-footer">
-            <button class="btn btn-sm btn-primary pull-right" type="submit">
-              <span class="glyphicon glyphicon-floppy-disk"></span> Entrar
+          <div class="col-lg-12">
+            <div class="input-group">
+              <div class="input-group-addon">
+                <span class="glyphicon glyphicon-user"></span>
+              </div>
+              <input class="form-control" name="login" type="text" ng-model="credentials.login" placeholder="Login" required autofocus>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-lg-12">
+            <div class="input-group">
+              <div class="input-group-addon">
+                <span class="glyphicon glyphicon-lock"></span>
+              </div>
+              <input class="form-control" name="login" type="password" ng-model="credentials.password" placeholder="Senha" required autofocus>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-lg-12">
+            <button class="btn btn-primary btn-block" type="submit">
+              <span class="glyphicon glyphicon-log-in"></span> Entrar
             </button>
           </div>
         </div>
+      </div>
+      <div class="panel-footer text-center">
+        <small>
+          Novo por aqui? <a href="#/user/new">Crie uma nova Conta</a>
+        </small>
       </div>
     </div>
   </div>
