--- a/poo-library-app-web/src/main/webapp/views/user/locacao/index.html
+++ b/poo-library-app-web/src/main/webapp/views/user/locacao/index.html
@@ -28,9 +28,8 @@
     <tbody>
       <tr ng-repeat="locacao in itens">
         <td>
-          <span class="glyphicon glyphicon-alert" ng-if="locacao.status == 'ATRASADA'"></span>
           <a class="btn btn-disabled" href="javascript:void(0);">
-            <span class="glyphicon glyphicon-alert text-danger" title="em atraso" ng-if="locacao.status == 'ATRASADA'"></span>
+            <span class="glyphicon glyphicon-alert text-danger" title="em atraso" ng-if="locacao.status == 'VENCIDA'"></span>
             <span class="glyphicon glyphicon-ok text-success" title="ok" ng-if="locacao.status == 'OK'"></span>
           </a>
         </td>
@@ -45,8 +44,8 @@
         </td>
         <td>
           <div class="btn-group">
-            <a class="btn btn-sm btn-primary" href="javascript:void(0);" title="Alugar" ng-click="locar(locacao.id)">
-              <span class="glyphicon glyphicon-shopping-cart"></span>
+            <a class="btn btn-sm btn-primary" href="javascript:void(0);" title="Devolver" ng-click="locar(locacao.id)">
+              <span class="glyphicon glyphicon-usd"></span>
             </a>
             <a data-target="#" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
