--- a/poo-library-app-web/src/main/webapp/views/user/menu/index.html
+++ b/poo-library-app-web/src/main/webapp/views/user/menu/index.html
@@ -43,28 +43,38 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-            <span class="glyphicon glyphicon-user"></span> Augusto
+            Augusto
             <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li class="divider"></li>
+          <ul class="dropdown-menu" role="menu" style="min-width: 24rem;">
             <li>
-              <a href="#/user/{{user.credentials.id}}/settings">
-                <span>
-                  <span class="glyphicon glyphicon-cog"></span> Configurações
+              <a href="#/user/{{user.credentials.id}}/profile" accesskey="p">
+                <span class="badge pull-right">
+                 <small>Alt + Shift + P</small>
                 </span>
                 <span>
+                  <span class="glyphicon glyphicon-user"></span> Meu perfil
+                </span>
+              </a>
+            </li>
+            <li class="divider"></li>
+            <li>
+              <a href="#/user/{{user.credentials.id}}/settings" accesskey="s">
+                <span class="badge pull-right">
                  <small>Alt + Shift + S</small>
+                </span>
+                <span>
+                  <span class="glyphicon glyphicon-cog"></span> Configurações
                 </span>
               </a>
             </li>
             <li class="divider"></li>
             <li>
               <a href="#/logout" ng-click="logout()" accesskey="e" class="clearfix">
+                <span class="badge pull-right">
+                 <small>Alt + Shift + E</small>
+                </span>
                 <span>
                   <span class="glyphicon glyphicon-log-out"></span> Sair
-                </span>
-                <span style="float: right;">
-                 <small>Alt + Shift + E</small>
                 </span>
               </a>
             </li>
