--- a/poo-library-app-web/src/main/webapp/views/user/locacao/index.html
+++ b/poo-library-app-web/src/main/webapp/views/user/locacao/index.html
@@ -44,17 +44,13 @@
         </td>
         <td>
           <div class="btn-group">
-            <a class="btn btn-sm btn-primary" href="javascript:void(0);" title="Devolver" ng-click="locar(locacao.id)">
+            <a class="btn btn-sm btn-primary" href="javascript:void(0);" title="Devolver" ng-click="devolver(locacao.id)">
               <span class="glyphicon glyphicon-usd"></span>
             </a>
             <a data-target="#" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu pull-right">
-              <li>
-                <a href="#">
-                  <span class="glyphicon glyphicon-heart"></span> Devolver</a>
-              </li>
               <li class="divider"></li>
               <li>
                 <a href="#">
