--- a/poo-library-app-web/src/main/webapp/views/admin/menu/index.html
+++ b/poo-library-app-web/src/main/webapp/views/admin/menu/index.html
@@ -26,7 +26,7 @@
               <a href="#/admin/usuario/new">
                 <span class="glyphicon glyphicon-plus"></span> Cadastro</a>
             </li>
-            <li class="divider"></li>
+            <!-- <li class="divider"></li>
             <li>
               <a href="javascript:void(0);">
                  Outra opção</a>
@@ -35,7 +35,7 @@
             <li>
               <a href="javascript:void(0);">
                 Mais outra opção</a>
-            </li>
+            </li> -->
           </ul>
         </li>
         <li class="dropdown">
@@ -51,13 +51,13 @@
               <a href="#/admin/biblioteca/new">
                 <span class="glyphicon glyphicon-plus"></span> Cadastro</a>
             </li>
-            <li class="divider"></li>
+            <!-- <li class="divider"></li>
             <li>
               <a href="javascript:void(0);">
                 <span class=""></span> Outra opção</a>
             </li>
             <li class="divider"></li>
-            <li><a href="javascript:void(0);">Mais outra opção</a></li>
+            <li><a href="javascript:void(0);">Mais outra opção</a></li> -->
           </ul>
         </li>
       </ul>
