--- a/poo-library-app-web/src/main/webapp/views/user/menu/index.html
+++ b/poo-library-app-web/src/main/webapp/views/user/menu/index.html
@@ -22,13 +22,13 @@
               <a href="#/user/acervo">
                 <span class="glyphicon glyphicon-th-list"></span> Busca</a>
             </li>
-            <li class="divider"></li>
+            <!-- x<li class="divider"></li>
             <li>
               <a href="javascript:void(0);">
                 <span class=""></span> Outra opção</a>
             </li>
             <li class="divider"></li>
-            <li><a href="javascript:void(0);">Mais outra opção</a></li>
+            <li><a href="javascript:void(0);">Mais outra opção</a></li> -->
           </ul>
         </li>
         <li class="">
