--- a/poo-library-app-web/src/main/webapp/views/user/locacao/index.html
+++ b/poo-library-app-web/src/main/webapp/views/user/locacao/index.html
@@ -21,7 +21,7 @@
       <tr>
         <td class="text-center" colspan="3" ng-if="itens == null || itens.length == 0">
           <em>
-            Nenhum item a exibir</em>
+            Nenhuma locação a exibir</em>
         </td>
       </tr>
     </tfoot>
