--- a/poo-library-app-web/src/main/webapp/views/user/reserva/index.html
+++ b/poo-library-app-web/src/main/webapp/views/user/reserva/index.html
@@ -9,6 +9,8 @@
   <table class="table table-striped table-hover">
     <thead>
       <tr>
+        <th style="width: 2rem;">
+          Status</th>
         <th>
           Reserva</th>
         <th style="width: 8rem;">
@@ -19,25 +21,31 @@
         <tr>
             <td class="text-center" colspan="2" ng-if="itens == null || itens.length == 0">
                 <em>
-                    Nenhum item a exibir</em>
+                    Nenhuma reserva a exibir</em>
             </td>
         </tr>
     </tfoot>
     <tbody>
-      <tr ng-repeat="item in itens">
+      <tr ng-repeat="reserva in itens">
         <td>
-          <a href="#{{url}}/{{item.id}}">
-            &#35;{{item.id}} - <strong>{{item.titulo}}</strong>
+          <a class="btn" href="javascript:void(0);">
+            <span class="glyphicon glyphicon-remove text-danger" title="Encerrada" ng-if="reserva.status == 'CANCELADA'"></span>
+            <span class="glyphicon glyphicon-info-sign text-info" title="Dentro do prazo" ng-if="reserva.status == 'OK'"></span>
+          </a>
+        </td>
+        <td>
+          <a href="#{{url}}/{{reserva.id}}">
+            &#35;{{reserva.id}} - <strong>{{reserva.itemAcervo.titulo}}</strong> ({{reserva.status}})
             <br>
             <small>
-              {{item.categoria}} :: <em>R$ {{item.precoLocacao}}</em>
+              {{reserva.itemAcervo.categoria}} :: <em>R$ {{reserva.precoLocacao}}</em>
             </small>
           </a>
         </td>
         <td>
           <div class="btn-group">
-            <a class="btn btn-sm btn-primary" href="javascript:void(0);" title="Alugar" ng-click="locar(item.id)">
-              <span class="glyphicon glyphicon-shopping-cart"></span>
+            <a class="btn btn-sm btn-primary" href="javascript:void(0);" title="Alugar" ng-click="cancelar(reserva.id)">
+              <span class="glyphicon glyphicon-remove"></span>
             </a>
             <a data-target="#" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
